Lisätty takaisin nappi actionbariin. Vaihdettu teema kyselyt-ikkunaan, sekä tulokset-ikkunaan. Teeman väritys muutettu samaksi kuin päävalikon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Ravitsemussovellus</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_raportit">RaportitActivity</string>
+    <string name="title_activity_raportit">Tulokset</string>
     <string name="tab_text_1">Päivänäkymä</string>
     <string name="tab_text_2">Viikkonäkymä</string>
-    <string name="title_activity_kysely">KyselyActivity</string>
+    <string name="title_activity_kysely">Kysely</string>
 </resources>
